--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
       "email": "omerucel@gmail.com"
     }
   ],
+  "require": {
+    "psr/container": "1.0.0"
+  },
   "require-dev": {
     "phpunit/phpunit": "4.0.14",
     "phpunit/php-code-coverage": "2.0.5"
